--- a/S48_旋转图像_中等.md
+++ b/S48_旋转图像_中等.md
@@ -6,15 +6,11 @@
  * @return {void} Do not return anything, modify matrix in-place instead.
  */
 var rotate = function(matrix) {
-    var l = matrix.length;
-    var temp = JSON.parse(JSON.stringify(matrix));
-    matrix.forEach((row, i) => {
+    var temp = JSON.parse(JSON.stringify(matrix.reverse()));
+    temp.forEach((row, i) => {
         row.forEach((v, j) => {
-            matrix[j][i] = temp[i][j];
+            matrix[j][i] = v;
         });
-    });
-    matrix.forEach(row => {
-        row.reverse();
     });
 };
 ```
