--- a/S20_有校的括号_简单.md
+++ b/S20_有校的括号_简单.md
@@ -6,8 +6,8 @@
  * @return {boolean}
  */
 var isValid = function(s) {
-    while((l = s.length) && (s = s.replace(/\(\)|\[\]|\{\}/g,'')) != '' && s.length != l);
-    return s.length == 0 ? true : false;
+    while((l = s.length) && (s = s.replace(/\(\)|\[\]|\{\}/g,'')) && s.length != l);
+    return !s.length;
 };
 ```
 
