--- a/S35_搜索插入位置_简单.md
+++ b/S35_搜索插入位置_简单.md
@@ -7,7 +7,7 @@
  * @return {number}
  */
 var searchInsert = function(nums, target) {
-    for (var i = 0, l = nums.length; i < l && nums[i] < target; i++) {}
+    for (var i = 0, l = nums.length; i < l && nums[i] < target; i++);
     return i;
 };
 ```
