--- a/S100_相同的树_简单.md
+++ b/S100_相同的树_简单.md
@@ -15,7 +15,7 @@
  * @return {boolean}
  */
 var isSameTree = function(p, q) {
-    return p == null && q == null ? true : p == null || q == null || p.val != q.val ? false : isSameTree(p.left, q.left) && isSameTree(p.right, q.right);
+    return !p && !q ? true : !p || !q || p.val != q.val ? false : isSameTree(p.left, q.left) && isSameTree(p.right, q.right);
 };
 ```
 
