--- a/S70_爬楼梯_简单.md
+++ b/S70_爬楼梯_简单.md
@@ -6,7 +6,7 @@
  * @return {number}
  */
 var climbStairs = function(n) {
-    return 1 / (sqrt5 = Math.sqrt(5)) * (Math.pow((1 + sqrt5) / 2, n + 1) - Math.pow((1 - sqrt5) / 2, n + 1));
+    return 1 / (sqrt5 = Math.sqrt(5)) * (Math.pow((1 + sqrt5) / 2, ++n) - Math.pow((1 - sqrt5) / 2, n));
 };
 ```
 
