--- a/S112_路径总和_简单.md
+++ b/S112_路径总和_简单.md
@@ -11,6 +11,7 @@
 /**
  * @param {TreeNode} root
  * @param {number} sum
+ * @return {boolean}
  */
 var hasPathSum = function(root, sum) {
     return !root ? false : !root.left && !root.right ? sum == root.val : hasPathSum(root.right, sum - root.val) || hasPathSum(root.left, sum - root.val);
