--- a/S169_多数元素_简单.md
+++ b/S169_多数元素_简单.md
@@ -7,12 +7,7 @@
  */
 var majorityElement = function(nums) {
     var candidate, count = 0;
-    nums.forEach(e => {
-        if (count == 0) {
-            candidate = e;
-        }
-        count += e == candidate ? 1 : -1;
-    });
+    nums.forEach(e => count += e == (candidate = !count ? e : candidate) ? 1 : -1);
     return candidate;
 };
 ```
