--- a/S9_回文数_简单.md
+++ b/S9_回文数_简单.md
@@ -6,7 +6,7 @@
  * @return {boolean}
  */
 var isPalindrome = function(x) {
-    str = x.toString();
+    var str = x.toString();
     for (let i = 0, j = str.length - 1; j >= Math.ceil(j/2); i++,j--) {
         if (str[i] != str[j]) return false;
     }
