--- a/S268_缺失数字_简单.md
+++ b/S268_缺失数字_简单.md
@@ -1,6 +1,6 @@
 # 第268题 缺失数字
 
-####数学法：
+#### 数学法：
 
 ```javascript
 /**
@@ -12,11 +12,7 @@ var missingNumber = function(nums) {
 };
 ```
 
-
-$$
-高斯求和 = {n \times {(n + 1)}  \over 2}
-$$
-
+`高斯求和 = n *(n + 1) \ 2`
 
 高斯求和能求出 0 到 n 之和，（高斯求和求出之和）减去（输入数列和）得到缺失数字。
 
@@ -36,11 +32,7 @@ var missingNumber = function(nums) {
 
 方法：异或（等差数列）和（输入数列）
 
-
-$$
-a\text{ 异或 } a = 0
-$$
-
+`a 异或 a = 0 `
 
 相同数字异或会消掉，因此，等差数列异或输入数列，只有等差数列中对应缺失数字的数字无法被消掉，该数字也就是缺失数字。
 
