--- a/S1_两数之和_简单.md
+++ b/S1_两数之和_简单.md
@@ -1,6 +1,16 @@
 # 第1题 两数之和
 
-#### 解一
+####一行解：
+
+```javascript
+var twoSum = (nums, target) => (recursion = (m, i) => (d = target - nums[i]) in m ? [m[d], i] : (m[nums[i]] = i) < 0 || recursion(m, ++i))({}, 0);
+```
+
+
+
+### 正常解￬
+
+#### 解一：
 
 ```javascript
 /**
@@ -20,7 +30,7 @@ var twoSum = function(nums, target) {
 
 
 
-#### 解二
+#### 解二：
 
 ```javascript
 /**
@@ -35,4 +45,3 @@ var twoSum = function(nums, target) {
     }
 };
 ```
-
