--- a/S867_转置矩阵_简单.md
+++ b/S867_转置矩阵_简单.md
@@ -1,5 +1,15 @@
 # 第867题 转置矩阵
 
+#### 一行解：
+
+```javascript
+var transpose = A => new Array(A[0].length).fill().map((a, i) => new Array(A.length).fill().map((e, j) => A[j][i]));
+```
+
+
+
+#### 正常解：
+
 ```javascript
 /**
  * @param {number[][]} A
