--- a/S867_转置矩阵_简单.md
+++ b/S867_转置矩阵_简单.md
@@ -3,7 +3,7 @@
 #### 一行解：
 
 ```javascript
-var transpose = A => new Array(A[0].length).fill().map((a, i) => new Array(A.length).fill().map((e, j) => A[j][i]));
+var transpose = A => new Array(A[0].length).fill().map((_, i) => new Array(A.length).fill().map((_, j) => A[j][i]));
 ```
 
 
