--- a/S867_转置矩阵_简单.md
+++ b/S867_转置矩阵_简单.md
@@ -6,6 +6,12 @@
 var transpose = A => new Array(A[0].length).fill().map((_, i) => new Array(A.length).fill().map((_, j) => A[j][i]));
 ```
 
+后来知道不需要 `new Array` ，所以变得更简单
+
+```javascript
+var transpose = A => A[0].map((_, i) => A.map(e => e[i]));
+```
+
 
 
 #### 正常解：
